--- a/index.html
+++ b/index.html
@@ -46,8 +46,14 @@
 
 <!--Main-->
 <main>
-<!-- Modal-->
-<div class="backdrop" data-modal>
+<!--Block hero-->
+<section class="section-hero">
+<div class="container">
+    <div class="hero-wrapper">
+<h1 class="title">Ефективні рішення для вашого бізнесу</h1>
+<button class="button-hero button" type="button" data-modal-open>Замовити послугу</button>
+
+<div class="backdrop is-hidden" data-modal>
     <div class="modal">
         <button class="close-modal" data-modal-close>
         <svg class="icon-close" width="11" height="11">
@@ -56,12 +62,6 @@
         </button>
     </div>
 </div>
-<!--Block hero-->
-<section class="section-hero">
-<div class="container">
-    <div class="hero-wrapper">
-<h1 class="title">Ефективні рішення для вашого бізнесу</h1>
-<button class="button-hero button" type="button" data-modal-open>Замовити послугу</button>
     </div>
 </div>
 </section>
