--- a/index.html
+++ b/index.html
@@ -123,17 +123,17 @@
 <ul class="list flex">
 <li class="function-item">
 <img class="card" src="./images/img1.jpg" alt="Someone is typing on the keyboard with both hands" width="370" height="294">
-<p class="function-text">Десктопні додатки</p>
+<h3 class="function-title">Десктопні додатки</h3>
 </li>
 
 <li class="function-item">
 <img class="card" src="./images/img2.jpg" alt="Someone is holding a phone in his left hand" width="370" height="294">
-<p class="function-text">Мобільні додатки</p>
+<h3 class="function-title">Мобільні додатки</h3>
 </li>
 
 <li class="function-item">
 <img class="card" src="./images/img3.jpg" alt="Someone is holding a map-board in his left hand, and a pen in his right hand" width="370" height="294">
-<p class="function-text">Дизайнерські рішення</p>
+<h3 class="function-title">Дизайнерські рішення</h3>
 </li>
 </ul>
     </div>
