--- a/portfolio.html
+++ b/portfolio.html
@@ -15,11 +15,9 @@
     <div class="container">
 <a class="logo" href="index.html"><span class="logotype" >Web</span>Studio</a>
 <nav class="site-nav">
-<ul class="list nav">
-    <li><a class="link studio" href="index.html">Студія</a></li>
-    <li><a class="link portfolio current" href="./portfolio.html">Портфоліо</a></li>
-    <li><a class="link contacts" href="#">Контакти</a></li>
-</ul> 
+    <a class="link studio" href="index.html">Студія</a></li>
+    <a class="link portfolio current" href="./portfolio.html">Портфоліо</a></li>
+    <a class="link contacts" href="#">Контакти</a></li>
 </nav>
 
 <ul class="list auth-nav">
